tests/conc/reject/closure.ty
fn main():
    h := fn(x: int) -> int: x * 2
    t := spawn h(3)
    print(str(wait(t)))
